Bug 618141 - 'IndexedDB: createObjectStore and createIndex should accept an optional object argument'. r=sicking, a=blocking.